272 - hermes-definition-api - Add InputProperty and OutputProperty interfaces to define inout and output properties, remove generics from Property, replace oneOf with any and mark it as output only property